--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,54 +1,56 @@
 [[bin]]
-    name = "create"
-    path = "api/create.rs"
+name = "create"
+path = "api/create.rs"
 [[bin]]
-    name = "eligibility"
-    path = "api/eligibility.rs"
+name = "eligibility"
+path = "api/eligibility.rs"
 [[bin]]
-    name = "health"
-    path = "api/health.rs"
+name = "health"
+path = "api/health.rs"
 [[bin]]
-    name = "validity"
-    path = "api/validity.rs"
+name = "validity"
+path = "api/validity.rs"
 
 [package]
-    authors = ["Sablier Labs Ltd <contact@sablier.com>"]
-    description = "A web API for generating and verifying Merkle trees used in Sablier V2"
-    edition = "2021"
-    homepage = "https://github.com/sablier-labs/v2-merkle-api"
-    name = "sablier_merkle_api"
-    version = "0.0.1"
+authors = ["Sablier Labs Ltd <contact@sablier.com>"]
+description = "A web API for generating and verifying Merkle trees used in Sablier V2"
+edition = "2021"
+homepage = "https://github.com/sablier-labs/v2-merkle-api"
+name = "sablier_merkle_api"
+version = "0.0.1"
 
 [profile.release]
-    opt-level = 3
+opt-level = 3
 
 [dependencies]
-    bytes = "1.5"
-    chrono = "0.4"
-    csv = "1.1"
-    dotenvy = "0.15"
-    ethers-rs = "0.2"
-    futures = "0.3"
-    hex = "0.4"
-    merkle-tree-rs = "0.1"
-    mockito = "1.2.0"
-    multipart = "0.18"
-    once_cell = "1.18.0"
-    openssl = { version = "0.10", features = ["vendored"] }
-    regex = "1.9"
-    reqwest = { version = "0.11", features = ["json", "multipart"] }
-    serde = { version = "1.0", features = ["derive"] }
-    serde_json = "1.0"
-    tokio = { version = "1.24", features = ["full"] }
-    url = "2.4"
-    vercel_runtime = "1.1"
-    warp = "0.3"
-    warp_lambda = "0.1"
+bytes = "1.5"
+chrono = "0.4"
+csv = "1.1"
+dotenvy = "0.15"
+ethers-rs = "0.2"
+futures = "0.3"
+hex = "0.4"
+libc = "0.2.170"
+merkle-tree-rs = "0.1"
+mockito = "1.2.0"
+multipart = "0.18"
+once_cell = "1.18.0"
+openssl = { version = "0.10.17", features = ["vendored"] }
+regex = "1.9"
+reqwest = { version = "0.11", features = ["json", "multipart"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+sysinfo = "0.33.1"
+tokio = { version = "1.24", features = ["full"] }
+url = "2.4"
+vercel_runtime = "1.1"
+warp = "0.3"
+warp_lambda = "0.1"
 
 [dependencies.uuid]
-    features = [
-        "fast-rng",          # Use a faster (but still sufficiently random) RNG
-        "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
-        "v4",                # Lets you generate random UUIDs
-    ]
-    version = "1.4"
+features = [
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+    "v4",                # Lets you generate random UUIDs
+]
+version = "1.4"
