--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -20,9 +20,12 @@ env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
 
 jobs:
+  ci:
+    uses: "./.github/workflows/ci.yml"
+
   deploy:
-    name: "Deploy to AWS"
     environment: "Production"
+    needs: "ci"
     runs-on: "ubuntu-latest"
     steps:
       - name: "Check out the repo"
