--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -35,7 +35,7 @@ jobs:
         uses: "aws-actions/configure-aws-credentials@v4"
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-region: $AWS_REGION
+          aws-region: ${{ env.AWS_REGION }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: "Login to Amazon ECR (Container Registry)"
