--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -15,8 +15,6 @@ on:
 # Define environment variables for reuse
 env:
   AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-  AWS_ECS_CLUSTER: ${{ secrets.AWS_ECS_CLUSTER }}
-  AWS_ECS_SERVICE: ${{ secrets.AWS_ECS_SERVICE }}
   AWS_REGION: ${{ secrets.AWS_REGION }}
 
 jobs:
@@ -58,16 +56,16 @@ jobs:
       - name: "Deploy to Amazon ECS (Container Service)"
         run: |
           aws ecs update-service \
-            --cluster ${{ env.AWS_ECS_CLUSTER }} \
-            --service  ${{ env.AWS_ECS_SERVICE}} \
+            --cluster ${{ secrets.AWS_ECS_CLUSTER }} \
+            --service  ${{ secrets.AWS_ECS_SERVICE}} \
             --force-new-deployment
 
       - name: "Verify deployment to Amazon ECS"
         run: |
           echo "Waiting for service to stabilize..."
           aws ecs wait services-stable \
-            --cluster ${{ env.AWS_ECS_CLUSTER }} \
-            --services ${{ env.AWS_ECS_SERVICE}}
+            --cluster ${{ secrets.AWS_ECS_CLUSTER }} \
+            --services ${{ secrets.AWS_ECS_SERVICE}}
           echo "Service is stable"
 
       - name: "Add summary"
